# ifvms.js

./: .eslintrc.yml  .gitignore  .gitmodules  .travis.yml  0288-Operand-types-are-now-specified-for-opcode_builder.patch  0289-Callers-can-now-run-their-routines-directly.patch  0290-Track-outstanding-branches-jumps-that-haven-t-been-c.patch  CONTRIBUTORS  Gruntfile.js  LICENCE  LICENSE  Makefile  README.md  config.js  package.json
.github/workflows/: build-and-test.yml
src/: index.js  zvm.js
src/common/: ast.js  bytearray.js  class.js  file.js  idioms.js  iff.js  outro.js  runner.js  util.js  utils.js
src/decompiler/: Cargo.toml
src/decompiler/ifvms/: Cargo.toml
src/decompiler/ifvms-decompiler/: Cargo.toml
src/decompiler/ifvms-decompiler/src/: lib.rs
src/decompiler/ifvms-decompiler/src/zvm/: disassembler.rs  mod.rs  opcodes.rs
src/decompiler/ifvms/src/: codegen_zvm.rs  lib.rs
src/zvm/: api.js  disassembler.js  dispatch.js  header.txt  intro.js  io.js  opcodes.js  outro.js  quetzal.js  runtime.js  text.js  ui.js  vm.js  zvm.css
test/: praxix.js  praxix.py  praxix.z5  zvm-bootstrap.js
tests/: .eslintrc.yml  curses.regtest  praxix-bundled.regtest  praxix.js  praxix.regtest  praxix.z5  regtest.py  runtests.sh
