[package]
name = "ifvms"
version = "2.0.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
ifvms-decompiler = {path = "../ifvms-decompiler"}
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"

[features]
panic_hook = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]